<resources>
    <string name="search_providers_list_key" translatable="false">search_providers_list</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="search_types_list_key" translatable="false">search_type_list</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="auto_update_plugins_key" translatable="false">auto_update_plugins</string>
    <string name="auto_download_plugins_key" translatable="false">auto_download_plugins_key2</string>
    <string name="skip_update_key" translatable="false">skip_update_key</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="test_providers_key" translatable="false">test_providers_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quality_pref_key</string>
    <string name="quality_pref_mobile_data_key" translatable="false">quality_pref_mobile_data_key</string>
    <string name="player_default_key" translatable="false">player_default_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
    <string name="apk_installer_key" translatable="false">apk_installer_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key2</string>
    <string name="android_tv_interface_off_seek_key" translatable="false">android_tv_interface_off_seek_key</string>
    <string name="android_tv_interface_on_seek_key" translatable="false">android_tv_interface_on_seek_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="autoplay_next_key" translatable="false">autoplay_next_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="show_trailers_key" translatable="false">show_trailers_key</string>
    <string name="show_kitsu_posters_key" translatable="false">show_kitsu_posters_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="jsdelivr_proxy_key" translatable="false">jsdelivr_proxy_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="download_parallel_key" translatable="false">download_parallel_key</string>
    <string name="download_concurrent_key" translatable="false">download_concurrent_key</string>
    <string name="download_path_key_visual" translatable="false">download_path_key_visual</string>
    <string name="app_name_download_path" translatable="false">meelstream</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="automatic_backup_key" translatable="false">automatic_backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key_2</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="log_enabled_key" translatable="false">log_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="overscan_key" translatable="false">overscan_key</string>
    <string name="poster_size_key" translatable="false">poster_size_key</string>
    <string name="subtitles_encoding_key" translatable="false">subtitles_encoding_key</string>
    <string name="override_site_key" translatable="false">override_site_key</string>
    <string name="redo_setup_key" translatable="false">redo_setup_key</string>
    <string name="filter_sub_lang_key" translatable="false">filter_sub_lang_key</string>
    <string name="pref_filter_search_quality_key" translatable="false">pref_filter_search_quality_key</string>
    <string name="enable_nsfw_on_providers_key" translatable="false">enable_nsfw_on_providers_key</string>
    <string name="skip_startup_account_select_key" translatable="false">skip_startup_account_select_key</string>
    <string name="enable_skip_op_from_database" translatable="false">enable_skip_op_from_database</string>
    <string name="rotate_video_key" translatable="false">rotate_video_key</string>
    <string name="auto_rotate_video_key" translatable="false">auto_rotate_video_key</string>
    <string name="biometric_key" translatable="false">biometric_key</string>
    <string name="extra_info_format" formatted="true" translatable="false">%d %s | %s</string>
    <string name="storage_size_format" formatted="true" translatable="false">%s • %s</string>
    <string name="download_size_format" formatted="true" translatable="false">%s / %s</string>
    <string name="episode_name_format" formatted="true" translatable="false">%s %s</string>
    <string name="ffw_text_format" formatted="true" translatable="false">+%d</string>
    <string name="rew_text_format" formatted="true" translatable="false">-%d</string>
    <string name="ffw_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rew_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rating_format" formatted="true" translatable="false">%s/10.0</string>
    <string name="year_format" formatted="true" translatable="false">%d</string>
    <string name="app_dub_sub_episode_text_format" formatted="true">%1$s Ep %2$d</string>
    <string name="cast_format" formatted="true">Cast: %s</string>
    <string name="next_episode_format" formatted="true">Episode %d will be released in</string>
    <string name="next_season_episode_format" formatted="true">Season %1$d Episode %2$d will be released in</string>
    <string name="next_episode_time_day_format" formatted="true">%1$dd %2$dh %3$dm</string>
    <string name="next_episode_time_hour_format" formatted="true">%1$dh %2$dm</string>
    <string name="next_episode_time_min_format" formatted="true">%dm</string>
    <string name="download_time_left_hour_min_sec_format" formatted="true">%1$dh %2$dm %3$ds</string>
    <string name="download_time_left_min_sec_format" formatted="true">%1$dm %2$ds</string>
    <string name="download_time_left_sec_format" formatted="true">%1$ds</string>
    <string name="result_poster_img_des">Poster</string>
    <string name="search_poster_img_des">Poster</string>
    <string name="episode_poster_img_des">Episode Poster</string>
    <string name="home_main_poster_img_des">Main Poster</string>
    <string name="home_next_random_img_des">Next Random</string>
    <string name="episode_play_img_des" translatable="false">@string/play_episode</string>
    <string name="go_back_img_des">Go back</string>
    <string name="play_from_beginning_img_des">Play from the Beginning</string>
    <string name="change_providers_img_des" translatable="false">@string/home_change_provider_img_des</string>
    <string name="home_change_provider_img_des">Change Provider</string>
    <string name="preview_background_img_des">Preview Background</string>
    <string name="player_speed_text_format" formatted="true">Speed (%.2fx)</string>
    <string name="rated_format" formatted="true">Rated: %.1f</string>
    <string name="new_update_format" formatted="true">New update found!\n%1$s -&gt; %2$s</string>
    <string name="filler" formatted="true">Filler</string>
    <string name="duration_format" formatted="true">%d min</string>
    <string name="app_name">meelstream</string>
    <string name="play_with_app_name">Play with meelstream</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Search…</string>
    <string name="search_hint_site" formatted="true">Search %s…</string>
    <string name="speech_recognition_unavailable">Speech recognition is not available</string>
    <string name="begin_speaking">Begin Speaking…</string>
    <string name="no_data">No Data</string>
    <string name="episode_more_options_des">More Options</string>
    <string name="next_episode">Next episode</string>
    <string name="result_plot" translatable="false">@string/synopsis</string>
    <string name="result_tags">Genres</string>
    <string name="result_share">Share</string>
    <string name="result_open_in_browser">Open In Browser</string>
    <string name="browser">Browser</string>
    <string name="skip_loading">Skip Loading</string>
    <string name="loading">Loading…</string>
    <string name="type_watching">Watching</string>
    <string name="type_on_hold">On-Hold</string>
    <string name="type_completed">Completed</string>
    <string name="type_dropped">Dropped</string>
    <string name="type_plan_to_watch">Plan to Watch</string>
    <string name="type_none" translatable="false">@string/none</string>
    <string name="type_re_watching">Rewatching</string>
    <string name="play_movie_button">Play Movie</string>
    <string name="play_trailer_button">Play Trailer</string>
    <string name="play_livestream_button">Play Livestream</string>
    <string name="play_torrent_button">Stream Torrent</string>
    <string name="reload_error">Retry connection…</string>
    <string name="search">Search</string>
    <string name="account">account</string>
    <string name="home_source">Source</string>
    <string name="home_random">Random</string>
    <string name="go_to_downloads">Go to Downloads</string>
    <string name="reload_provider">Reload Provider</string>
</resources>