<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meel_home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/meel_home_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/meel_main_progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/meel_home_loading_shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingTop="40dp"
            app:shimmer_auto_start="true"
            app:shimmer_base_alpha="0.2"
            app:shimmer_duration="@integer/loading_time"
            app:shimmer_highlight_alpha="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="125dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/loading_margin"
                        android:background="@color/grayShimmer"
                        android:translationX="-164dp"
                        app:cardCornerRadius="@dimen/loading_radius" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="148dp"
                        android:layout_height="234dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/loading_margin"
                        android:background="@color/grayShimmer"
                        app:cardCornerRadius="@dimen/loading_radius" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="125dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/loading_margin"
                        android:background="@color/grayShimmer"
                        android:translationX="164dp"
                        app:cardCornerRadius="@dimen/loading_radius" />
                </FrameLayout>

                <include layout="@layout/loading_line_short_center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/result_padding"
                    android:orientation="vertical">

                    <include layout="@layout/loading_list" />
                    <include layout="@layout/loading_list" />
                    <include layout="@layout/loading_list" />
                </LinearLayout>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/meel_home_api_holder"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/meel_home_change_api"
                style="@style/RegularButtonTV"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/player_button_tv_attr_no_bg"
                android:nextFocusLeft="@id/nav_rail_view"
                android:nextFocusRight="@id/meel_home_switch_account" />

            <ImageView
                android:id="@+id/meel_home_reload_provider"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/player_button_tv_attr_no_bg"
                android:contentDescription="@string/reload_provider"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_refresh"
                app:tint="@color/player_on_button_tv_attr" />

            <ImageView
                android:id="@+id/meel_home_search_button"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/player_button_tv_attr_no_bg"
                android:contentDescription="@string/search"
                android:padding="10dp"
                android:src="@drawable/search_icon"
                app:tint="@color/player_on_button_tv_attr" />

            <ImageView
                android:id="@+id/meel_home_switch_account"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/account"
                android:padding="10dp"
                android:src="@drawable/ic_outline_account_circle_24" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/meel_home_loading_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meel_home_reload_button"
            style="@style/WhiteButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:minWidth="200dp"
            android:text="@string/reload_error"
            app:icon="@drawable/ic_baseline_autorenew_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meel_home_open_browser"
            style="@style/BlackButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:minWidth="200dp"
            android:text="@string/result_open_in_browser"
            app:icon="@drawable/ic_baseline_public_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meel_home_go_to_downloads"
            style="@style/BlackButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:minWidth="200dp"
            android:text="@string/go_to_downloads"
            app:icon="@drawable/netflix_download" />

        <TextView
            android:id="@+id/meel_result_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="?attr/textColor" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meel_home_master_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        android:nextFocusLeft="@id/nav_rail_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/homepage_parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/meel_home_api_fab"
        style="@style/ExtendedFloatingActionButton"
        android:text="@string/home_source"
        android:textColor="?attr/textColor"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_filter_list_24"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/meel_home_random"
        style="@style/ExtendedFloatingActionButton"
        android:layout_gravity="bottom|start"
        android:text="@string/home_random"
        android:textColor="?attr/textColor"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_play_arrow_24"
        tools:visibility="visible" />

</FrameLayout>